language/move-lang/tests/move_check/typing/if_mismatched_branches.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_mismatched_branches.move:3:9
  │
3 │         if (cond) () else 0;
  │         ^^^^^^^^^^^^^^^^^^^
  │         │         │       │
  │         │         │       Found: integer. It is not compatible with the other type.
  │         │         Found: '()'. It is not compatible with the other type.
  │         Incompatible branches

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_mismatched_branches.move:4:9
  │
4 │         if (cond) 0 else ();
  │         ^^^^^^^^^^^^^^^^^^^
  │         │         │      │
  │         │         │      Found: '()'. It is not compatible with the other type.
  │         │         Found: integer. It is not compatible with the other type.
  │         Incompatible branches

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_mismatched_branches.move:8:9
  │
8 │         if (cond) @0x0 else 0;
  │         ^^^^^^^^^^^^^^^^^^^^^
  │         │         │         │
  │         │         │         Found: integer. It is not compatible with the other type.
  │         │         Found: 'address'. It is not compatible with the other type.
  │         Incompatible branches

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/if_mismatched_branches.move:9:9
  │
9 │         if (cond) 0 else false;
  │         ^^^^^^^^^^^^^^^^^^^^^^
  │         │         │      │
  │         │         │      Found: 'bool'. It is not compatible with the other type.
  │         │         Found: integer. It is not compatible with the other type.
  │         Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_mismatched_branches.move:13:9
   │
13 │         if (cond) (0, false) else (1, 1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │             │               │
   │         │             │               Found: integer. It is not compatible with the other type.
   │         │             Found: 'bool'. It is not compatible with the other type.
   │         Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_mismatched_branches.move:14:9
   │
14 │         if (cond) (0, false) else (false, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │          │               │
   │         │          │               Found: 'bool'. It is not compatible with the other type.
   │         │          Found: integer. It is not compatible with the other type.
   │         Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_mismatched_branches.move:15:9
   │
15 │         if (cond) (0, false) else (true, @0x0);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │          │               │
   │         │          │               Found: 'bool'. It is not compatible with the other type.
   │         │          Found: integer. It is not compatible with the other type.
   │         Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_mismatched_branches.move:19:9
   │
19 │         if (cond) (0, false, 0) else (0, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │         │                  │
   │         │         │                  Found expression list of length 2: '({integer}, bool)'. It is not compatible with the other type of length 3.
   │         │         Found expression list of length 3: '({integer}, bool, {integer})'. It is not compatible with the other type of length 2.
   │         Incompatible branches

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/if_mismatched_branches.move:20:9
   │
20 │         if (cond) (0, false) else (0, false, 0);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │         │               │
   │         │         │               Found expression list of length 3: '({integer}, bool, {integer})'. It is not compatible with the other type of length 2.
   │         │         Found expression list of length 2: '({integer}, bool)'. It is not compatible with the other type of length 3.
   │         Incompatible branches

